MangoBajito/tests/Lenguajes_II/Operacion/valid/03-division_decimal.mng
# Test 03: Operacion de division decimal.
culito div_decimal_manguita: manguita;
culito div_decimal_manguangua: manguangua;
se_prende(){
	culito n1: manguita = -8.9;
	n1 = 3 / 2;
	n1 = n1 / 8.7 / 4.12;
	n1 = (n1 / 1.23) / (n1 / 2.22);
	div_decimal_manguita = n1 / 1.21;

	culito n2: manguangua = 8.2e+10;
	n2 = n2 / 11.2e+10;
	n2 = n2 / 8.2e+10 / 4.2e+10;
	n2 = (n2 / 1.2e+10) / (n2 / 2.2e+10);
	div_decimal_manguangua = n2 / 1.2e+10;
};